git checkout and git diff

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li>Dejar pasar solo a los mayores de edad</li>
             <li>La primera persona que entre despues de las 2 AM, no paga</li>
         </ul>
-
+        <p>Nuevo cambio</p>
     </div>
     <script src="codigo.js"> </script> 
 </body>
